:lipstick: Fix style issues on mobile

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -189,3 +189,11 @@ h1 {
   padding: 1rem;
   margin: 0px;
 }
+.pageTitle {
+  background: url(/assets/img/background.jpg);
+  background-size: cover;
+  margin: 0px;
+  padding: 10px;
+  border-radius: 0px 0px 25% 25%;
+  color: white;
+}
