--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -3,6 +3,7 @@
   background: #2b2b2b;
 }
 .navbar__link {
+  display: inline-block;
   color: #ab64ff;
   text-decoration: none;
   border-radius: 5px;
